<resources>
    <string name="gps_status_title">Status</string>
    <string name="gps_map_title">Map</string>
    <string name="gps_sky_title">Sky</string>
    <string name="gps_accuracy_title">Accuracy</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="navdrawer_separator_assist_data">Modify assist data</string>
    <string name="force_psds_injection">Inject PSDS data</string>
    <string name="force_time_injection">Inject time data</string>
    <string name="delete_aiding_data">Clear assist data</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_send_feedback">Send feedback</string>
    <string name="navdrawer_item_open_source">Visit us on GitHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gps_start">Start</string>
    <string name="gps_pause">Pause</string>
    <string name="delete_aiding_data_success">Successfully deleted assist data.</string>
    <string name="delete_aiding_data_failure">Device does not support deleting assist data.
    </string>
    <string name="gps_switch">Off/On</string>
    <string name="gps_switch_content_description">GNSS Off/On</string>
    <string name="share">Share</string>
    <string name="copied_to_clipboard">Location copied to clipboard</string>
    <string name="send_log">"Send log…"</string>
    <string name="log">Log</string>
    <string name="file_name">File name</string>
    <string name="location">Location</string>
    <string name="log_instructions">Enable logging for NMEA, raw measurements, navigation messages, and more in Settings</string>
    <string name="log_error">Something went wrong with file logging. Did you allow file/storage permissions? Try re-enabling a file logging option in Settings and tap "Allow" when prompted.</string>
    <string name="no_location">Try sharing your location after getting a GNSS fix…</string>
    <string name="include_altitude">Include altitude</string>
    <string name="set_fix_frequency">Set Fix Frequency</string>
    <string name="force_time_injection_success">Successfully injected time data.</string>
    <string name="force_time_injection_failure">Device does not support injecting time data.
    </string>
    <string name="force_psds_injection_success">Successfully injected PSDS data.</string>
    <string name="force_psds_injection_failure">Device does not support injecting PSDS data.
    </string>
    <string name="device">Device</string>
    <string name="upload_details">Uploads your device capabilities (e.g., device make and model, supported GNSS, supported SBAS, dual-frequency support) to the public GPSTest Device Database (https://bit.ly/gpstest-device-database).\n\nNo private information from your device is shared.</string>
    <string name="upload_no_location">Please switch to the Status screen, wait for a GNSS fix, and then return to this screen to upload device capabilities.</string>
    <string name="upload_success">Successfully uploaded device capabilities!</string>
    <string name="upload_failure">Upload of device capabilities failed. Please try again.</string>
    <string name="upload_nothing_changed">Nothing changed since last upload. Please try again later.</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="mode_map">Map</string>
    <string name="mode_satellite">Satellite</string>
    <string name="latitude_label">Lat:</string>
    <string name="longitude_label">Long:</string>
    <string name="fix_time_label">Time:</string>
    <string name="ttff_label">TTFF:</string>
    <string name="altitude_label">Alt:</string>
    <string name="altitude_msl_label">Alt (MSL):</string>
    <string name="accuracy_label">E H Acc:</string>
    <string name="hor_and_vert_accuracy_label">E H/V Acc:</string>
    <string name="speed_label">Speed:</string>
    <string name="speed_acc_label">S. Acc:</string>
    <string name="bearing_label">Bearing:</string>
    <string name="bearing_acc_label">B. Acc:</string>
    <string name="num_sats_label"># Sats:</string>
    <string name="pdop_label">PDOP:</string>
    <string name="hvdop_label">H/V DOP:</string>
    <string name="id_column_label">ID</string>
    <string name="gnss_flag_image_label">GNSS</string>
    <string name="sbas_flag_image_label">SBAS</string>
    <string name="cf_column_label">CF</string>
    <string name="gps_cn0_column_label">C/N0</string>
    <string name="avg_cn0_label">Avg</string>
    <string name="elevation_column_label">Elev</string>
    <string name="azimuth_column_label">Azim</string>
    <string name="flags_aeu_column_label">Flags</string>
    <string name="gps_not_supported">Please check system settings - device doesn\'t seem to support GNSS/GPS.</string>
    <string name="install">Install</string>
    <string name="no_thanks">No thanks</string>
    <string name="please_install_google_maps">The Map tab requires Google Maps</string>
    <string name="enable_gps_message">GPS/GNSS is disabled. Enable it now?</string>
    <string name="enable_gps_positive_button">Enable GPS/GNSS</string>
    <string name="enable_gps_negative_button">No</string>
    <string name="gnss_running">GNSS running with interval = %1$ss, min. dist. = %2$sm</string>
    <string name="clear_assist_warning_title">Delete assist data?</string>
    <string name="clear_assist_warning">Some devices may take 24 hours to auto-refresh assist data.  If your device doesn\'t support manual injection, GNSS may not work for any app until the auto-refresh completes. Are you sure?</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="qr_code_instructions_title">Scan a QR Code</string>
    <string name="qr_code_instructions_text">Import a ground truth location using a QR Code in the Geo URI format (geo:28.0587,-82.4139).  Create your own QR Codes at https://zxing.appspot.com/generator/.</string>
    <string name="qr_code_cannot_read_code">Couldn\'t read a Geo URI from the QR code</string>
    <string name="never_show_again">Never show again</string>
    <string name="not_now">Not now</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="gnss_not_available">Global Navigation Satellite System (GNSS) satellites not available</string>
    <string name="sbas_not_available">Satellite-based Augmentation System (SBAS) satellites not available</string>
    <string name="menu_option_sort_by">Sort by</string>
    <string name="menu_option_sort_by_content_description">Sort signals by</string>
    <string name="menu_option_filter">Filter</string>
    <string name="menu_option_filter_content_description">Filter signals</string>
    <string name="filter_dialog_title">Show only these GNSS</string>
    <string name="filter_signal_text">Showing %1$d of %2$d signals</string>
    <string name="filter_showall">(show all)</string>
    <string name="error_time_title">Your GNSS time is wrong</string>
    <string name="error_time_message">The device GNSS time of:\n\n%1$s\n\n…is more than %2$d days different from your system clock. This can be caused by the GPS week rollover issue - ask your device manufacturer for details. See https://bit.ly/gps-week-rollover for more info.</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="notification_title">%1$d/%2$d sats &#8226; %3$d/%4$d signals</string>
    <string name="gps_content_description">GPS</string>
    <string name="glonass_content_description">GLONASS</string>
    <string name="galileo_content_description">Galileo</string>
    <string name="qzss_content_description">QZSS</string>
    <string name="beidou_content_description">BeiDou</string>
    <string name="irnss_content_description">NavIC</string>
    <string name="waas_content_description">WAAS</string>
    <string name="egnos_content_description">EGNOS</string>
    <string name="gagan_content_description">GAGAN</string>
    <string name="msas_content_description">MSAS</string>
    <string name="sdcm_content_description">SDCM</string>
    <string name="snas_content_description">SNAS</string>
    <string name="saccsa_content_description">SACCSA</string>
    <string name="ground_truth_latitude">Your latitude</string>
    <string name="ground_truth_longitude">Your longitude</string>
    <string name="ground_truth_altitude">Meters above WGS84 ellipsoid (Optional)</string>
    <string name="set_ground_truth_title">Measure accuracy</string>
    <string name="set_ground_truth_subtitle">Tap on map or type your real location</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="ground_truth_marker_title">Your real location</string>
    <string name="ground_truth_invalid_location_title">Invalid location</string>
    <string name="ground_truth_invalid_lat">Latitude must be in decimal degrees between -90 and 90</string>
    <string name="ground_truth_invalid_long">Longitude must be in decimal degrees between -180 and 180</string>
    <string name="ground_truth_invalid_alt">Altitude must be in WGS84 in meters</string>
    <string name="horizontal_error_title">Horizontal Error</string>
    <string name="vertical_error_title">Vertical Error</string>
    <string name="horizontal_error_label">Error</string>
    <string name="measured_error_graph_label">Measured error</string>
    <string name="estimated_accuracy_graph_label">Accuracy estimated by hardware</string>
    <string name="horizontal_vertical_error_label">H/V Error</string>
    <string name="avg_error_label">avg %1$d fixes</string>
    <string name="fix_number">Fix #</string>
    <string name="show_radar_valid_location">Ground truth location imported!</string>
    <string name="show_radar_invalid_location">The imported ground truth location is invalid</string>
    <string name="sky_legend_title">Legend</string>
    <string name="sky_legend_shape_gnss_title">Global Navigation Satellite Systems (GNSS)</string>
    <string name="sky_legend_shape_navstar">NAVSTAR GPS (USA)</string>
    <string name="sky_legend_shape_glonass">GLONASS (Russia)</string>
    <string name="sky_legend_shape_galileo">Galileo (European Union)</string>
    <string name="sky_legend_shape_qzss">QZSS (Japan)</string>
    <string name="sky_legend_shape_beidou">BeiDou/COMPASS (China)</string>
    <string name="sky_legend_shape_irnss">IRNSS/NavIC (India)</string>
    <string name="sky_legend_shape_sbas_title">Satellite-based Augmentation Systems (SBAS)</string>
    <string name="sky_legend_shape_waas">WAAS (USA)</string>
    <string name="sky_legend_shape_egnos">EGNOS (European Union)</string>
    <string name="sky_legend_shape_gagan">GAGAN (India)</string>
    <string name="sky_legend_shape_msas">MSAS (Japan)</string>
    <string name="sky_legend_shape_sdcm">SDCM (Russia)</string>
    <string name="sky_legend_shape_snas">BDSBAS/SNAS (China)</string>
    <string name="sky_legend_shape_saccsa">SACCSA (ICAO)</string>
    <string name="sky_legend_shape_availability_title">Signal Availability</string>
    <string name="sky_legend_shape_not_in_view">Not in view of device</string>
    <string name="sky_legend_shape_in_view">In view</string>
    <string name="sky_legend_shape_used_in_fix">Used in fix</string>
    <string name="help">Help</string>
    <string name="dashboard_turn_on_gnss">Turn on tracking to detect device capabilities</string>
    <string name="dashboard_supported_gnss">Supported GNSS</string>
    <string name="dashboard_usa">USA</string>
    <string name="dashboard_eu">European Union</string>
    <string name="copy">copy</string>
    <string name="open_in_geohack">open in geohack</string>
    <string name="open_in_map_app">open in map app</string>
    <string name="browse_folder">browse folder</string>
</resources>