<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_file_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:layout_marginStart="24dp"
    android:layout_marginBottom="6dp"
    app:layout_constraintTop_toTopOf="parent"
    android:clipChildren="false">

    <TextView
        android:id="@+id/log_file_label"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/log_file_name" />

    <TextView
        android:id="@+id/log_file_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:textIsSelectable="true"
        tools:text="gnss_log_2019-02-04_12_20_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/log_instructions"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/button_margin"
        android:text="@string/log_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_browse"
        style="@style/Widget.AppTheme.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_margin"
        app:icon="@drawable/ic_folder_black_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/log_share"
        android:contentDescription="@string/browse_folder"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_share"
        style="@style/Widget.AppTheme.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_margin"
        app:icon="@drawable/ic_share_black_36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/share"/>
</androidx.constraintlayout.widget.ConstraintLayout>