<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_share_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="24dp"
    app:layout_constraintTop_toTopOf="parent"
    android:clipChildren="false">

    <TextView
        android:id="@+id/location_value"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/button_margin"
        android:textIsSelectable="true"
        tools:text="28.3748343,-82.38475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_location"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/button_margin"
        android:textIsSelectable="true"
        android:text="@string/no_location"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scroll_coordinate_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_value"
        android:scrollbars="none"
        android:clipChildren="false">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/coordinate_format_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:singleLine="true"
            app:singleSelection="true"
            android:clipChildren="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_decimal_degrees"
                style="@style/Widget.Material3.Chip.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Decimal degrees" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dms"
                style="@style/Widget.Material3.Chip.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DMS" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_degrees_decimal_minutes"
                style="@style/Widget.Material3.Chip.Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Degrees Decimal Minutes" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <CheckBox
        android:id="@+id/include_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:text="@string/include_altitude"
        app:layout_constraintTop_toBottomOf="@id/scroll_coordinate_format"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="include_altitude" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_copy"
            style="@style/Widget.AppTheme.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            app:icon="@drawable/ic_content_copy_black_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/location_geohack"
            android:contentDescription="@string/copy"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_geohack"
            style="@style/Widget.AppTheme.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            app:icon="@drawable/ic_public_black_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/location_launch_app"
            android:contentDescription="@string/open_in_geohack"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_launch_app"
            style="@style/Widget.AppTheme.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            app:icon="@drawable/ic_open_in_new_black_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/location_share"
            android:contentDescription="@string/open_in_map_app"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_share"
            style="@style/Widget.AppTheme.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            app:icon="@drawable/ic_share_black_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/share"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
